# JpegCompress

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/lzy/com/jpegcompress/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/lzy/com/jpegcompress/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/lzy/com/jpegcompress/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
jpegcompresslibrary/: CMakeLists.txt  build.gradle
jpegcompresslibrary/src/androidTest/java/lzy/com/jpegcompresslibrary/: ExampleInstrumentedTest.java
jpegcompresslibrary/src/main/: AndroidManifest.xml
jpegcompresslibrary/src/main/cpp/: native-lib.cpp
jpegcompresslibrary/src/main/java/lzy/com/jpegcompresslibrary/: JpegCompressUtil.java
jpegcompresslibrary/src/main/res/values/: strings.xml
jpegcompresslibrary/src/test/java/lzy/com/jpegcompresslibrary/: ExampleUnitTest.java
